compiler/examples/test_wrong_timing.expected
Test error
Error when node is timed:
test_wrong_timing.mls:5:38-54: equation for test(1) with type int has an invalid timing expectation
